#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT
AC_CONFIG_SRCDIR([configure.in])

AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(inptools, 1.0.0)

# Checks for programs.
AC_LANG([C])
AC_PROG_CC
AC_USE_SYSTEM_EXTENSIONS
AM_PROG_CC_C_O
IT_PROG_INTLTOOL

# Checks for libraries.
AC_CHECK_LIB(m, pow)
AC_CHECK_LIB(shp, DBFOpen)
AC_CHECK_LIB(proj, pj_init)
AC_CHECK_LIB(epanet2, ENopen)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([toolkit.h stdlib.h string.h libshp/shapefil.h proj_api.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_STRTOD

AC_CONFIG_FILES([Makefile data/Makefile data/icons/Makefile \
	src/Makefile installer/Makefile installer/rpm/Makefile \
	po/Makefile.in installer/win32/Makefile \
	installer/win32/locale/Makefile po/Makefile \
	doc/Makefile doc/en/Makefile doc/de/Makefile doc/en/figure/Makefile \
	doc/de/figure/Makefile])
AC_OUTPUT
